fix: copyright statement wrapping and apply text wrap pretty globally

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,7 @@
 @plugin "daisyui" {
   themes: night --default;
 }
+
+:root {
+  @apply text-pretty;
+}
